--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="noodp" />
         <title>Vincent Le Corre</title><meta name="Description" content="Особистий сайт Вінсента Ле Корре."><meta property="og:url" content="https://ua.vincentlecorre.org/">
   <meta property="og:site_name" content="Vincent Le Corre">
-  <meta property="og:title" content="Home">
+  <meta property="og:title" content="Vincent Le Corre">
   <meta property="og:description" content="🇺🇦 Українська
 Примітка: Зверніть увагу, що українська не є моєю рідною мовою. Я скористався програмним забезпеченням для перекладу, щоб створити цю версію. Для точнішої та достовірнішої версії зверніться до англійського або французького варіанту.
 Злочини
@@ -18,7 +18,7 @@ McDonald’s проводив глобальні рекламні ігри, не
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Home">
+  <meta name="twitter:title" content="Vincent Le Corre">
   <meta name="twitter:description" content="🇺🇦 Українська
 Примітка: Зверніть увагу, що українська не є моєю рідною мовою. Я скористався програмним забезпеченням для перекладу, щоб створити цю версію. Для точнішої та достовірнішої версії зверніться до англійського або французького варіанту.
 Злочини
@@ -191,8 +191,44 @@ Amos 5:24 <!-- Переклад Української Біблії Правос
 </div>
             </div></div></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.linkedin.com/in/x-v-france/" target="_blank">Vincent Le Corre</a></span></div>
+        <div class="footer-container">
+
+            <div class="language-list" style="text-align: center; font-size: 0.9em; opacity: 0.8; padding-top: 1em;"><a href="https://www.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  English 🇺🇸🇬🇧🇮🇪🇨🇦🇦🇺🇳🇿
+                </a>&nbsp;|&nbsp;<a href="https://ar.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Arabic • العربية 🇸🇦
+                </a>&nbsp;|&nbsp;<a href="https://www.lushengqiao.com/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Chinese simplified • 简体中文 🇨🇳
+                </a>&nbsp;|&nbsp;<a href="https://zh-hant.lushengqiao.com/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Chinese traditional • 繁體中文 🇭🇰🇲🇴
+                </a>&nbsp;|&nbsp;<a href="https://nl.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Dutch • Nederlands 🇳🇱🇧🇪
+                </a>&nbsp;|&nbsp;<a href="https://www.vincentlecorre.fr/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  French • Français 🇫🇷🇧🇪🇨🇦🇨🇭🇨🇩🇸🇳🇨🇲🌍
+                </a>&nbsp;|&nbsp;<a href="https://de.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  German • Deutsch 🇩🇪🇦🇹🇨🇭
+                </a>&nbsp;|&nbsp;<a href="https://hi.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Hindi • हिन्दी 🇮🇳
+                </a>&nbsp;|&nbsp;<a href="https://it.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Italian • Italiano 🇮🇹🇨🇭🇸🇲🇻🇦
+                </a>&nbsp;|&nbsp;<a href="https://ja.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Japanese • 日本語 🇯🇵
+                </a>&nbsp;|&nbsp;<a href="https://pl.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Polish • Polski 🇵🇱
+                </a>&nbsp;|&nbsp;<a href="https://pt-br.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Portuguese • Português 🇧🇷🇵🇹🇦🇴🇲🇿🌎
+                </a>&nbsp;|&nbsp;<a href="https://ro.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Romanian • Română 🇷🇴🇲🇩
+                </a>&nbsp;|&nbsp;<a href="https://ru.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Russian • Русский 🇷🇺
+                </a>&nbsp;|&nbsp;<a href="https://es.vincentlecorre.org/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Spanish • Español 🇪🇸🇦🇷🇲🇽
+                </a>&nbsp;|&nbsp;<a href="/" style="text-decoration: none; color: inherit; white-space: nowrap; transition: all 0.2s;" onmouseover="this.style.textDecoration='underline'; this.style.color='#007acc';" onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                  Ukrainian • Українська 🇺🇦
+                </a></div>
+            <br><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.linkedin.com/in/x-v-france/" target="_blank">Vincent Le Corre</a></span></div>
         </div>
+        <div style="height: 2em;"><br><br><br></div>
     </footer></div>
 
         <div id="fixed-buttons"><a href="#" id="back-to-top" class="fixed-button" title="Повернутися до початку">
