--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="noodp" />
         <title>Vincent Le Corre</title><meta name="Description" content="Особистий сайт Вінсента Ле Корре."><meta property="og:url" content="https://ua.vincentlecorre.org/">
   <meta property="og:site_name" content="Vincent Le Corre">
-  <meta property="og:title" content="Vincent Le Corre">
+  <meta property="og:title" content="Vincent Le Corre • Венсан Ле Корре • 陆圣乔">
   <meta property="og:description" content="🇺🇦 Українська
 Примітка: Зверніть увагу, що українська не є моєю рідною мовою. Я скористався програмним забезпеченням для перекладу, щоб створити цю версію. Для точнішої та достовірнішої версії зверніться до англійського або французького варіанту.
 Злочини
@@ -18,7 +18,7 @@ McDonald’s проводив глобальні рекламні ігри, не
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Vincent Le Corre">
+  <meta name="twitter:title" content="Vincent Le Corre • Венсан Ле Корре • 陆圣乔">
   <meta name="twitter:description" content="🇺🇦 Українська
 Примітка: Зверніть увагу, що українська не є моєю рідною мовою. Я скористався програмним забезпеченням для перекладу, щоб створити цю версію. Для точнішої та достовірнішої версії зверніться до англійського або французького варіанту.
 Злочини
@@ -147,7 +147,20 @@ McDonald’s проводив глобальні рекламні ігри, не
                 </a></div>
     </div>
 </header><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div style="
+  text-align: center;
+  font-size: 1.6em;
+  line-height: 2;
+  letter-spacing: 0.3em;
+  font-weight: bold;
+">
+  <span style="letter-spacing: 0.1em;"> Vincent  Le  Corre    </span><br>
+  <span style="letter-spacing: 0.1em;"> Венсан  Ле  Корре   </span><br>
+  <span>陆</span><span>　</span><span>圣</span><span>　</span><span>乔</span><br>
+  <span>光</span><span>　</span><span>之</span><span>　</span><span>树</span><br>
+  <span>神</span><span>　</span><span>战</span><span>　</span><span>士</span>
+</div>
+<div class="home-avatar"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="/images/avatar-blue-color-shirt-512px-512px.jpg"
@@ -183,7 +196,8 @@ Amos 5:24 <!-- Переклад Української Біблії Правос
 <p>Це нагадує нам, що деякі сили не можна зупинити, як і волю нашого Творця, що рухається вперед невідворотно.<br>
 Божественна справедливість не вагається. Вона прориває темряву, очищає корупцію і <em>завжди</em> перемагає.</p>
 <p>І так само, як Янцзи і Хуанхе завжди течуть до свого кінця, я теж слідуватиму цією вузькою стежкою до єдиної справжньої перемоги: тієї, що відновлює справедливість, приносить мир і виконує волю Неба.</p>
-<p>Vincent Le Corre</p>
+<p>Vincent Le Corre<br>
+Венсан Ле Корре</p>
 <p>
   <a href="https://www.linkedin.com/in/x-v-france">Натисніть тут, щоб стежити за мною в LinkedIn</a><br/>
   Ви також можете надіслати мені електронного листа на цю адресу: <a href="mailto:vincent@ecthrwatch.org">vincent@ecthrwatch.org</a>
